Fix wiki pages being cut off with new content layout
https://community.openproject.org/work_packages/56576

--- a/frontend/src/global_styles/layout/_print.sass
+++ b/frontend/src/global_styles/layout/_print.sass
@@ -30,6 +30,9 @@
     background: #fff
     overflow: visible !important
 
+  #content
+    overflow: visible !important
+
   .autoscroll
     overflow-x: visible
 
